# ChessEngine

./: .gitignore  CMakeLists.txt  README.md
src/: bitboard.cc  bitboard.h  bitboard_utils.cc  bitboard_utils.h  main.cc  move.h  position.cc  position.h
tests/: test_position.cc
